# ontobricks

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  ISSUE-52-FIX-REPORT.md  Makefile  README.md  app.yaml.template  commitlint.config.js  databricks.yml  mypy_baseline.txt  pyproject.toml  pytest.ini  requirements.txt
.claude/skills/ai-feature/: SKILL.md  SPEC.template.md
.claude/worktrees/: README.md
.cursor/: 02-project-overview.mdc  03-system-components-and-requirements.mdc  04-project-structure.mdc  05-code-style-and-structure.mdc  07-project-conventions.mdc  11-frontend-design.mdc  12-ai-feature-lifecycle.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: changelog-presence.yml  ci.yml  eval-drift.yml  eval-gate.yml  lint-pr-title.yml  nightly.yml
.planning/: ROADMAP.md
.planning/agents/: README.md
.planning/agents/agent_auto_assignment/: SPEC.md
.planning/agents/agent_auto_icon_assign/: SPEC.md
.planning/agents/agent_cohort/: SPEC.md
.planning/agents/agent_dtwin_chat/: SPEC.md
.planning/agents/agent_ontology_assistant/: SPEC.md
.planning/agents/agent_owl_generator/: SPEC.md
changelogs/: README.md
ci/: coverage_thresholds.yaml
docs/: INFO.md  PR_REVIEW_CHECKLIST.md  api.md  architecture.md  code_organization.md  cohort_discovery.md  data-access.md  deployment.md  development.md  features.md  get-started.md  graphdb-integration.md  import-export.md  lakebase-graphdb.md  product.md  user-guide.md
docs/sphinx/: changelog.rst  conf.py  index.rst
docs/sphinx/api/: app.core.graphdb.lakebase.rst  app.core.graphdb.rst  app.core.reasoning.rst  app.core.triplestore.rst
docs/sphinx/overview/: architecture.rst
docs/superpowers/plans/: 2026-06-18-ai-agent-clarifying-questions.md
docs/superpowers/specs/: 2026-06-18-ai-agent-clarifying-questions-design.md
licenses/: README.md
licenses/python/: d2klab-ontology-pitfalls-detector-LICENSE.txt  nltk-LICENSE.txt  scikit-learn-LICENSE.txt  scipy-LICENSE.txt  sentence-transformers-LICENSE.txt
releases/: ReleaseNotes_V0.5.0.md  ReleaseNotes_V0.5.1.md  ReleaseNotes_V3.3.1.md  Roadmap_2026-05.md  Roadmap_2026-06.md
scripts/: _render-app-yaml.py  bootstrap-app-permissions.sh  bootstrap-lakebase-perms.sh  check-mypy-diff.py  check_coverage.py  deploy.config.sh  deploy.sh  generate-mypy-baseline.sh  migrate-registry-to-lakebase.sh  setup.sh  start.sh  upgrade_lakebase_0.4_To_0.5.sql  upgrade_lakebase_0.5_To_0.6.sql  upgrade_lakebase_0.6_drop_comment_anchor.sql
scripts/pre-commit/: check-changelog-presence.sh  forbid-gsd-imports.sh
src/: .coding_rules.md
src/agents/: PITFALL_RULES.md  registry.py
src/agents/agent_business_rules_generator/: __init__.py  engine.py  tools.py
src/agents/agent_dtwin_chat/: engine.py  tools.py
src/agents/agent_ontology_assistant/: engine.py  tools.py
src/agents/agent_owl_generator/: engine.py  tools.py
src/agents/agent_task_planner/: __init__.py  engine.py  tools.py
src/agents/agent_task_router/: __init__.py  engine.py  tools.py
src/agents/tools/: context.py  documents.py  pitfalls.py
src/api/routers/: digitaltwin.py  domains.py
src/api/routers/internal/: dtwin.py  (+6 more)
src/back/fastapi/: graphql_routes.py
src/front/config/: menu_config.json
src/front/fastapi/: dependencies.py
src/front/routes/: domain.py  dtwin.py
src/front/templates/: about.html  access_denied.html  base.html  domain.html  dtwin.html  home.html  mapping.html  ontology.html  registry.html  settings.html
src/mcp-server/: app.yaml  app.yaml.template
src/mcp-server/server/: app.py
src/shared/config/: constants.py  settings.py
src/shared/fastapi/: csrf.py  error_handlers.py  health.py  main.py  timing.py
tests/: test_build_pipeline_streaming.py  test_business_rules.py  test_cohort_builder.py  test_domain_service.py  test_domain_session.py  test_graph_engine_config.py  test_graphdb_factory.py  test_health.py  test_lakebase_flat_store.py  test_permission_middleware.py  test_reasoning_service.py  test_registry.py  test_registry_store.py  test_routes.py  test_settings_lakebase_status.py  test_swrl_engine.py  test_sync_uc_schema.py  test_synced_table_manager.py  test_triplestore_factory.py  test_ui_rendering.py
tests/contract/: test_graphql_schema.py  test_openapi_contract.py
tests/e2e/: conftest.py
tests/e2e/settings/: test_settings_flows.py
tests/eval/: README.md  thresholds.yaml
tests/fixtures/: databricks_auth.py  http.py  mcp_client.py  mlflow.py  redaction.py
tests/fixtures/factories/: __init__.py  domain_factory.py  mapping_factory.py  ontology_factory.py  shacl_factory.py  triple_factory.py
tests/live_integration/: conftest.py  test_app_smoke.py  test_mcp_smoke.py
tests/mcp/: conftest.py
tests/mcp/integration/: test_more_smoke_tools.py  test_smoke_tools.py  test_tool_parametrized.py  test_tool_schemas.py
tests/property/: test_owl_roundtrip.py  test_r2rml_idempotent.py  test_shacl_conformance.py
tests/units/agents/: test_agent_business_rules_generator.py  test_agent_ontology_assistant_engine.py  test_agent_task_planner.py  test_agent_task_router.py  test_documents_tool.py
tests/units/api/: test_comment_endpoints.py  test_discussion_panel_assets.py  test_domain_current_user_endpoint.py  test_external_api.py  test_review_endpoints.py  test_routes.py  test_set_version_status_endpoint.py  test_ui_rendering.py
tests/units/auth/: test_permission_middleware.py  test_permissions.py
tests/units/core/: test_document_extractor.py  test_health.py  test_sql_warehouse.py
tests/units/domain/: test_domain_service.py
tests/units/dtwin/: test_build_pipeline_streaming.py
tests/units/mapping/: test_mapping_service.py  test_r2rml_generator.py
tests/units/ontology/: test_business_rules_accept.py  test_industry_importers.py  test_ontology_service.py  test_owl_generator.py  test_owl_parser.py  test_pitfalls_service.py
tests/units/registry/: test_agent_task_runner.py  test_comment_service.py  test_registry.py  test_registry_published.py  test_registry_store.py  test_review_service.py  test_version_lifecycle.py
(+243 files in other folders)
