[project]
name = "ontobricks"
version = "0.3.1"
description = "Ontology Management Tool for Databricks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.27",
    "starlette>=0.35.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    "pyarrow>=14.0.0",
    "rdflib>=7.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "strawberry-graphql[fastapi]>=0.312.3",
    "mlflow>=3.11.1",
    "real_ladybug>=0.1.0",
    "apscheduler>=3.10,<4",
    "owlrl>=7.0.0",
    "pyshacl>=0.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Install with: ``uv sync --extra lakebase`` or ``pip install .[lakebase]``.
# Only required when ``REGISTRY_BACKEND=lakebase``. Volume-only deployments
# work without these.
lakebase = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "playwright>=1.40.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/back", "src/front", "src/shared", "src/agents", "src/api"]

[tool.uv]
constraint-dependencies = [
    # CVE-2026-44307: path traversal via backslash URI on Windows in TemplateLookup
    "mako>=1.3.12",
    "pygments>=2.20.0",
    # GHSA-rpm5-65cw-6hj4: command injection via upload_pack/receive_pack kwargs
    # CVE-2026-44243: path traversal in reference APIs (fixed in 3.1.48)
    # CVE-2026-44244: newline injection in config_writer().set_value() (fixed in 3.1.49)
    # GHSA-mv93-w799-cj2w: section param newline bypass → RCE (fixed in 3.1.50, #26)
    # NOTE: proxy (pypi-proxy.dev.databricks.com) tops out at 3.1.49; bump to
    # >=3.1.50 once the proxy is updated to close #26 fully.
    "gitpython>=3.1.49",
    # GHSA-qccp-gfcp-xxvc / CVE-2026-????: sensitive headers forwarded in proxied
    # low-level redirects — fixed in urllib3 2.7.0, but the internal proxy
    # (pypi-proxy.dev.databricks.com) does not carry that version yet.
    # Re-enable this constraint once the proxy is updated.
    # "urllib3>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
