[project]
name = "ontobricks"
version = "0.4.0"
description = "Ontology Management Tool for Databricks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.27",
    "starlette>=0.35.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    "pyarrow>=14.0.0",
    "rdflib>=7.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "strawberry-graphql[fastapi]>=0.312.3",
    "mlflow>=3.11.1",
    "apscheduler>=3.10,<4",
    "owlrl>=7.0.0",
    "pyshacl>=0.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Install with: ``uv sync --extra lakebase`` or ``pip install .[lakebase]``.
# Required since v0.4.0 — the registry runs on Lakebase (Postgres).
lakebase = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "playwright>=1.40.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/back", "src/front", "src/shared", "src/agents", "src/api"]

[tool.uv]
constraint-dependencies = [
    # CVE-2026-44307 / GHSA-2h4p-vjrc-8xpq (TemplateLookup path traversal on Windows).
    "mako>=1.3.12",
    "pygments>=2.20.0",
    # GitPython: path traversal / config_writer newline injection (GHSA-v87r-6q3f-2j67,
    # GHSA-mv93-w799-cj2w, GHSA-r4m4-rvvq-cwh7) and config_writer() section-param newline
    # injection bypass that re-enables RCE via core.hooksPath (bypass of CVE-2026-42215).
    # Fixed in 3.1.50. Pulled in transitively by mlflow-skinny.
    "gitpython>=3.1.50",
    # urllib3 2.7.0 fixes two high-severity issues:
    #   GHSA-mf9v-mfxr-j63j  decompression-bomb bypasses in streaming API parts
    #   GHSA-qccp-gfcp-xxvc  sensitive headers forwarded in proxied low-level redirects
    "urllib3>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
