[project]
name = "ontobricks"
version = "0.6.0"
description = "Ontology Management Tool for Databricks"
requires-python = ">=3.10"
dependencies = [
    # fastapi>=0.129.0 added Starlette 1.0.0+ support (needed for the
    # starlette>=1.3.0 BadHost fix below).
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # python-multipart>=0.0.30: quadratic-time querystring parsing with semicolon
    # separators (CVE-2026-53539 / GHSA-5rvq-cxj2-64vf), parameter smuggling via
    # semicolons (CVE-2026-53538), negative Content-Length memory allocation
    # (GHSA-h8vp-42mj-3c4x), and RFC 2231 param smuggling (GHSA-4w6j-v5jc-5fqr).
    "python-multipart>=0.0.30",
    # starlette>=1.3.0: fixes BadHost (CVE-2026-48710 / GHSA-86qp-5c8j-p5mr).
    # TARGET: >=1.3.1 once the proxy mirrors it — that release also fixes form()
    # limits silently ignored for application/x-www-form-urlencoded DoS
    # (CVE-2026-54283 / GHSA-82w8-qh3p-5jfq).
    # Requires fastapi>=0.129 (Starlette 1.0 support added upstream Feb 2026).
    "starlette>=1.3.0",
    "itsdangerous>=2.1.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "databricks-sql-connector>=3.0.0",
    "databricks-sdk>=0.20.0",
    # pyarrow>=23.0.1: Arrow C++ IPC use-after-free (CVE-2026-25087 /
    # GHSA-rgxp-2hwp-jwgg). The Python binding doesn't expose the affected
    # PreBufferMetadata API, but pin to silence the advisory.
    "pyarrow>=23.0.1",
    "rdflib>=7.6.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    # strawberry-graphql>=0.315.7: MaxAliasesLimiter fragment-spread bypass
    # (CVE-2026-47707 / GHSA-fr49-mhgj-crfc) and circular-fragment DOS in
    # QueryDepthLimiter — both DOS via resource exhaustion.
    "strawberry-graphql[fastapi]>=0.315.7",
    # mlflow>=3.13.0: earlier versions require cryptography<47 which conflicts
    # with the cryptography>=48.0.1 security constraint below.
    "mlflow>=3.13.0",
    "apscheduler>=3.10,<4",
    "owlrl>=7.0.0",
    "pyshacl>=0.26.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
# Install with: ``uv sync --extra lakebase`` or ``pip install .[lakebase]``.
# Required since v0.4.0 — the registry runs on Lakebase (Postgres).
lakebase = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

# Ontology pitfall detection (D2KLab Ontology-Pitfalls-Detector).
# Install with: ``pip install .[pitfalls]``
# Heavy ML deps; downloaded on first use (SentenceTransformer model weights).
pitfalls = [
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.3.0",
    # nltk: TARGET >=3.10.0 once the proxy mirrors it — that release fixes
    # URL-encoded path traversal in nltk.data.load() (CVE-2026-54293 /
    # GHSA-p4gq-832x-fm9v). Proxy currently tops out at 3.9.4.
    "nltk>=3.9.4",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=26.3.1",
    "flake8>=6.0.0",
    "responses>=0.24.0",
    "playwright>=1.40.0",
    "sphinx>=7.0.0",
    "myst-parser>=3.0.0",
    "pip-audit>=2.7.0",
    # Test foundations (T-M0 onwards under CNS)
    "hypothesis>=6.100.0",        # property-based tests (T-M6)
    "syrupy>=4.6.0",              # snapshot tests for templates + MCP schemas
    "testcontainers[postgres]>=4.0.0",  # ephemeral Postgres for Lakebase tests (db marker)
    "fastmcp>=2.3.1",             # in-process MCP server tests (T-M3, mcp marker)
    "pyyaml>=6.0",                # consumed by scripts/check_coverage.py
    # M3.P1 quality enforcement
    "ruff>=0.7.4",                # supersedes flake8 once the baseline is clean
    "mypy>=1.13.0",               # type checker; runs against `mypy_baseline.txt`
    # Lakebase backend is the production registry path since v0.4.0; the
    # tests that exercise the registry-config gate need psycopg present so
    # the import-time short-circuit in SettingsService doesn't fire.
    # Mirrors `[project.optional-dependencies].lakebase` — kept in sync.
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/back", "src/front", "src/shared", "src/agents", "src/api"]

[tool.uv]
constraint-dependencies = [
    # CVE-2026-44307 / GHSA-2h4p-vjrc-8xpq (TemplateLookup path traversal on Windows).
    "mako>=1.3.12",
    "pygments>=2.20.0",
    # GitPython: path traversal / config_writer newline injection (GHSA-v87r-6q3f-2j67,
    # GHSA-mv93-w799-cj2w, GHSA-r4m4-rvvq-cwh7) and config_writer() section-param newline
    # injection bypass that re-enables RCE via core.hooksPath (bypass of CVE-2026-42215).
    # Fixed in 3.1.50. Pulled in transitively by mlflow-skinny.
    "gitpython>=3.1.50",
    # urllib3 2.7.0 fixes two high-severity issues:
    #   GHSA-mf9v-mfxr-j63j  decompression-bomb bypasses in streaming API parts
    #   GHSA-qccp-gfcp-xxvc  sensitive headers forwarded in proxied low-level redirects
    "urllib3>=2.7.0",
    # idna 3.13 closes bypass of CVE-2024-3651 mitigation (GHSA-65pc-fj4g-8rjx):
    #   specially crafted inputs to idna.encode() could still reach quadratic-time path.
    "idna>=3.13",
    # aiohttp 3.14.0 fixes two issues (pulled in transitively by mlflow):
    #   GHSA-jg22-mg44-37j8 (CVE-2026-34993)  CookieJar.load() pickle deserialization RCE
    #   GHSA-hg6j-4rv6-33pg (CVE-2026-47265)  per-request cookies leaked on cross-origin redirect
    # aiohttp 3.14.1 additionally fixes (all Moderate/Low):
    #   GHSA-xcgm-r5h9-7989 (CVE-2026-54274)  incomplete WS frame payloads bypass memory limits
    #   GHSA-g3cq-j2xw-wf74 (CVE-2026-54278)  compressed request bodies bypass client_max_size
    #   GHSA-jc7f-gxrc-qvfp (CVE-2026-54275)  HTTP/1 pipelined requests queue without limit
    #   GHSA-4wfr-65wf-jgh8 (CVE-2026-54276)  C HTTP parser bypasses max_line_size
    #   GHSA-hq6q-c2x6-hmch (CVE-2026-54277)  DigestAuth applies credentials to cross-origin redirects
    #   GHSA-7m7x-8h22-2jmj (CVE-2026-54279)  payload resources not closed after mid-body disconnect
    #   GHSA-mx4r-wm4h-xw27 (CVE-2026-54280)  TLS server hostname override ignored on reused HTTPS conn
    #   GHSA-f94q-p6mj-vj6r (CVE-2026-54281)  host-only cookies become domain cookies after persistence
    "aiohttp>=3.14.1",
    # cryptography>=48.0.1: vulnerable OpenSSL bundled in wheels prior to 48.0.1
    # (CVE-2026-34180 / GHSA-537c-gmf6-5ccf). OS-level patches do not help since
    # OpenSSL is statically linked inside the wheel.
    "cryptography>=48.0.1",
    # pyjwt: TARGET >=2.13.0 once the proxy mirrors it (proxy tops out at
    # 2.10.1). That release bundles five fixes:
    #   GHSA-xgmm-8j9v-c9wx (CVE-2026-48526)  public-key JWK accepted as HMAC secret → HS256 forgery
    #   GHSA-jq35-7prp-9v3f (CVE-2026-48527)  PyJWK algorithm allow-list bypass
    #   GHSA-r5fg-8rfm-jfxq (CVE-2026-48528)  DoS via unbounded Base64URL decoding (b64=false JWS)
    #   GHSA-vqx6-w8qr-234h (CVE-2026-48529)  PyJWKClient SSRF via file://, ftp://, data: schemes
    #   GHSA-hpqf-4wfj-9qcc (CVE-2026-48530)  PyJWKClient unbounded JWKS endpoint requests (DoS)
    "pyjwt>=2.10.1",
    # torch>=2.7.0 fixes memory corruption in torch.jit.script (CVE-2025-3000 /
    # GHSA-rrmf-rvhw-rf47). Already resolved at 2.11.0; constraint documents intent.
    "torch>=2.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers --strict-config"
markers = [
    "unit: Unit tests (pure in-process, no I/O — default)",
    "integration: Multi-module, in-proc backends",
    "contract: Schema/contract verification (subset of integration)",
    "e2e: Playwright browser flows (CI nightly only)",
    "eval: LLM agent quality evals (CNS T-M4)",
    "mcp: Exercises the MCP server (in-process or subprocess)",
    "db: Requires ephemeral Postgres (testcontainers)",
    "spark: Requires PySpark/Databricks Connect",
    "external: Hits a real Databricks workspace (nightly only — fevm-ontobricks-int)",
    "live_integration: Probes a deployed OntoBricks instance (requires ONTOBRICKS_LIVE_BASE)",
    "property: Hypothesis property-based tests",
    "slow: >2s wall clock",
    "asyncio: anyio/asyncio coroutine",
]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib.plugins.sparql.parser",
    "ignore::DeprecationWarning:rdflib.plugins.parsers.notation3",
    "ignore::DeprecationWarning:pyparsing.util",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/**/_starter_kit/*",
    "src/**/__init__.py",
    "src/**/migrations/*",
    "src/**/generated/*",
    "tests/*",
]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

# M3.P1 — ruff config. Replaces flake8 long-term; both run in CI during the
# transition until the codebase is ruff-clean.
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [
    "src/**/_starter_kit/*",
    "docs/sphinx/_build/*",
    ".venv/*",
    "htmlcov/*",
]

[tool.ruff.lint]
# Start with a conservative ruleset; we'll widen as the codebase tolerates it.
# E + W: pycodestyle. F: pyflakes. I: isort. UP: pyupgrade. B: bugbear (real bugs).
# Per the M3.P1 risk-mitigation: fail only on NEW violations via the pre-commit hook
# (`ruff --fix --exit-non-zero-on-fix`). CI uses `--no-fix` to gate.
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E203",  # whitespace before ':' — clashes with black.
    "E501",  # line too long — flake8 already enforces; let formatter own this.
    "B008",  # function-call-in-default-argument — common in FastAPI Depends(...).
]

[tool.ruff.lint.per-file-ignores]
# Tests get more leeway: bare excepts, unused imports in conftest, etc.
"tests/**/*.py" = ["B011", "F401", "F811"]
# __init__.py re-exports are intentional unused imports.
"src/**/__init__.py" = ["F401", "F403"]
# starter-kit is template-only; never enforce.
"src/**/_starter_kit/*" = ["ALL"]

# M3.P1 — mypy config. Begin in lenient mode against the baseline; tighten over time.
# The baseline file (`mypy_baseline.txt`) records currently-acceptable violations
# so PRs are only gated on NEW issues. Generate with:
#   uv run mypy src --no-error-summary > mypy_baseline.txt
[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true   # third-party untyped (rdflib, mlflow, etc.)
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# Strict-er switches we want eventually but are not ready yet:
disallow_untyped_defs = false
disallow_any_explicit = false
strict_optional = false
# Exclude tests + generated code from the gate (tests can be strict later).
# mypy treats these as Python regexes, not globs — use literal substrings.
exclude = "(tests/|/_starter_kit/|docs/|build/|dist/|\\.venv/)"

[[tool.mypy.overrides]]
module = [
    "rdflib.*",
    "owlrl.*",
    "pyshacl.*",
    "real_ladybug.*",
    "strawberry.*",
    "databricks.*",
    "mlflow.*",
    "psycopg.*",
    "psycopg_pool.*",
    "apscheduler.*",
    "fastmcp.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
